--- a/.config
+++ b/.config
@@ -159,7 +159,7 @@ CONFIG_PACKAGE_lsblk=y
 # CONFIG_PACKAGE_luci-app-bypass_INCLUDE_Xray is not set
 CONFIG_PACKAGE_luci-app-diskman=y
 CONFIG_PACKAGE_luci-app-homeproxy=y
-CONFIG_PACKAGE_luci-app-mihomo=y
+#CONFIG_PACKAGE_luci-app-mihomo=y
 CONFIG_PACKAGE_luci-app-multiaccountdial=y
 CONFIG_PACKAGE_luci-app-mwan3=y
 CONFIG_PACKAGE_luci-app-mwan3helper=y
